src/app/components/navbar/navbar.component.css
.navbar {
  background: rgba(8, 106, 181, 0.931);
}

.logo {
  width: 85px;
  transition: 0.3s;
}

.shrink {
  width: 50px !important;
}

.nav-link {
  color: white;
}

.navbar-toggler:focus,
.navbar-toggler:active,
.navbar-toggler-icon:focus {
  outline: none;
  box-shadow: none;
}

/*Mobile Specific Styling*/
@media (max-width: 992px) {

  .nav-link {
    text-transform: uppercase;
    letter-spacing: 2px;
    font-size: 26px;
    color: white!important;
    margin-top:15px;
    margin-bottom:15px;
  }

  .navbar-collapse ul {
    height: 100vh;
  }

  .button-73 {
    appearance: none;
    background-color: #FFFFFF;
    border-radius: 15px;
    border-style: none;
    box-shadow: #91befd 0 -12px 6px inset;
    box-sizing: border-box;
    color: #000000;
    cursor: pointer;
    display: inline-block;
    font-family: -apple-system,sans-serif;
    font-size: 1.1rem;
    font-weight: 700;
    letter-spacing: -.24px;
    margin: 0;
    outline: none;
    padding: 1rem 1rem;
    quotes: auto;
    text-align: center;
    text-decoration: none;
    transition: all .15s;
    user-select: none;
    -webkit-user-select: none;
    touch-action: manipulation;
  }

  .button-73:hover {
    background-color: #FFC229;
    box-shadow: #FF6314 0 -6px 8px inset;
    transform: scale(1.125);
  }
    
  .button-73:active {
    transform: scale(1.025);
  }

  .navbar-toggler-icon {
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(0, 0, 0, 0.5)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
  }

  .navbar-toggler {
    border: 1px solid #000;
    background: white;
  }

}

@media (min-width: 992px) {

  .background {
    background: orange !important;
  }

  .navbar {
    background: none;
    transition: 0.3s;
  }

  .logo {
    width: 120px;
    margin-left: 50px;
    transition: 0.3s;
  }

  .shrink {
    width: 70px !important;
  }

  .links {
    margin-right: 50px;
  }

  .logo:hover {
    transform: scale(1.1);
  }

  .nav-link {
    font-size: 20px;
    letter-spacing: 1.5px;
    color: black;
    transition: 0.3s;
  }

  .nav-link:hover {
    color: white !important;
  }

  a {
    color: #18272F;
    position: relative;
    text-decoration: none;
  }
  
  a::before {
    content: '';
    position: absolute;
    width: 100%;
    height: 2px;
    border-radius: 4px;
    background-color: rgb(8,107,181);
    bottom: 0;
    left: 0;
    transform-origin: right;
    transform: scaleX(0);
    transition: transform .3s ease-in-out;
  }
  
  .nav-link:hover::before {
    transform-origin: left;
    transform: scaleX(1);
  }

}

@media (min-width: 1600px) {

  .logo {
    width: 180px;
    margin-left: 50px;
    transition: 0.3s;
  }

  .shrink {
    width: 90px !important;
  }

  .nav-link {
    font-size: 23px;
  }

}

